cmake_minimum_required(VERSION 3.13)
project(abbc_from_mainrepp)

set(CMAKE_CXX_STANDARD 14)

include_directories(abbc/db-4.8.30/build_brew)
include_directories(abbc/db-4.8.30/build_s60)
include_directories(abbc/db-4.8.30/build_unix)
include_directories(abbc/db-4.8.30/build_vxworks)
include_directories(abbc/db-4.8.30/build_vxworks/test_micro)
include_directories(abbc/db-4.8.30/build_wince)
include_directories(abbc/db-4.8.30/build_windows)
include_directories(abbc/db-4.8.30/crypto/rijndael)
include_directories(abbc/db-4.8.30/db_sql)
include_directories(abbc/db-4.8.30/db_sql/sqlite)
include_directories(abbc/db-4.8.30/dbinc)
include_directories(abbc/db-4.8.30/dbinc_auto)
include_directories(abbc/db-4.8.30/dist)
include_directories(abbc/db-4.8.30/dist/brew)
include_directories(abbc/db-4.8.30/examples_c/csv)
include_directories(abbc/db-4.8.30/examples_c/ex_apprec)
include_directories(abbc/db-4.8.30/examples_c/ex_rep/base)
include_directories(abbc/db-4.8.30/examples_c/ex_rep/common)
include_directories(abbc/db-4.8.30/examples_c/getting_started)
include_directories(abbc/db-4.8.30/examples_cxx/excxx_repquote)
include_directories(abbc/db-4.8.30/examples_cxx/excxx_repquote_gsg)
include_directories(abbc/db-4.8.30/examples_cxx/getting_started)
include_directories(abbc/db-4.8.30/examples_cxx/wce_tpcb)
include_directories(abbc/db-4.8.30/examples_stl/repquote)
include_directories(abbc/db-4.8.30/mod_db4)
include_directories(abbc/db-4.8.30/perl/BerkeleyDB)
include_directories(abbc/db-4.8.30/perl/DB_File)
include_directories(abbc/db-4.8.30/php_db4)
include_directories(abbc/db-4.8.30/stl)
include_directories(abbc/db-4.8.30/test_micro/source)
include_directories(abbc/db-4.8.30/test_stl/base)
include_directories(abbc/src)
include_directories(abbc/src/build)
include_directories(abbc/src/json)
include_directories(abbc/src/leveldb/db)
include_directories(abbc/src/leveldb/helpers/memenv)
include_directories(abbc/src/leveldb/include)
include_directories(abbc/src/leveldb/include/leveldb)
include_directories(abbc/src/leveldb/port)
include_directories(abbc/src/leveldb/port/win)
include_directories(abbc/src/leveldb/table)
include_directories(abbc/src/leveldb/util)
include_directories(abbc/src/qt)
include_directories(abbc/src/qt/test)

add_executable(abbc_from_mainrepp
        abbc/db-4.8.30/btree/bt_compact.c
        abbc/db-4.8.30/btree/bt_compare.c
        abbc/db-4.8.30/btree/bt_compress.c
        abbc/db-4.8.30/btree/bt_conv.c
        abbc/db-4.8.30/btree/bt_curadj.c
        abbc/db-4.8.30/btree/bt_cursor.c
        abbc/db-4.8.30/btree/bt_delete.c
        abbc/db-4.8.30/btree/bt_method.c
        abbc/db-4.8.30/btree/bt_open.c
        abbc/db-4.8.30/btree/bt_put.c
        abbc/db-4.8.30/btree/bt_rec.c
        abbc/db-4.8.30/btree/bt_reclaim.c
        abbc/db-4.8.30/btree/bt_recno.c
        abbc/db-4.8.30/btree/bt_rsearch.c
        abbc/db-4.8.30/btree/bt_search.c
        abbc/db-4.8.30/btree/bt_split.c
        abbc/db-4.8.30/btree/bt_stat.c
        abbc/db-4.8.30/btree/bt_upgrade.c
        abbc/db-4.8.30/btree/bt_verify.c
        abbc/db-4.8.30/btree/btree_auto.c
        abbc/db-4.8.30/btree/btree_autop.c
        abbc/db-4.8.30/build_brew/brew_db.h
        abbc/db-4.8.30/build_brew/clib_port.h
        abbc/db-4.8.30/build_brew/db.h
        abbc/db-4.8.30/build_brew/db_config.h
        abbc/db-4.8.30/build_brew/db_int.h
        abbc/db-4.8.30/build_brew/errno.h
        abbc/db-4.8.30/build_s60/clib_port.h
        abbc/db-4.8.30/build_s60/db.h
        abbc/db-4.8.30/build_s60/db_config.h
        abbc/db-4.8.30/build_s60/db_int.h
        abbc/db-4.8.30/build_unix/clib_port.h
        abbc/db-4.8.30/build_unix/db.h
        abbc/db-4.8.30/build_unix/db_config.h
        abbc/db-4.8.30/build_unix/db_cxx.h
        abbc/db-4.8.30/build_unix/db_int.h
        abbc/db-4.8.30/build_vxworks/db_archive/db_archive.c
        abbc/db-4.8.30/build_vxworks/db_checkpoint/db_checkpoint.c
        abbc/db-4.8.30/build_vxworks/db_deadlock/db_deadlock.c
        abbc/db-4.8.30/build_vxworks/db_dump/db_dump.c
        abbc/db-4.8.30/build_vxworks/db_hotbackup/db_hotbackup.c
        abbc/db-4.8.30/build_vxworks/db_load/db_load.c
        abbc/db-4.8.30/build_vxworks/db_printlog/db_printlog.c
        abbc/db-4.8.30/build_vxworks/db_recover/db_recover.c
        abbc/db-4.8.30/build_vxworks/db_stat/db_stat.c
        abbc/db-4.8.30/build_vxworks/db_upgrade/db_upgrade.c
        abbc/db-4.8.30/build_vxworks/db_verify/db_verify.c
        abbc/db-4.8.30/build_vxworks/dbdemo/dbdemo.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_curalloc.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_curwalk.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_del.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_get.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_inmem.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_load.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_open.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_put.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_recover.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_txn.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_txn_write.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_uname.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_util.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_workload.c
        abbc/db-4.8.30/build_vxworks/test_micro/b_workload.h
        abbc/db-4.8.30/build_vxworks/test_micro/bench.h
        abbc/db-4.8.30/build_vxworks/test_micro/test_micro.c
        abbc/db-4.8.30/build_vxworks/clib_port.h
        abbc/db-4.8.30/build_vxworks/db.h
        abbc/db-4.8.30/build_vxworks/db_config.h
        abbc/db-4.8.30/build_vxworks/db_config_small.h
        abbc/db-4.8.30/build_vxworks/db_cxx.h
        abbc/db-4.8.30/build_vxworks/db_int.h
        abbc/db-4.8.30/build_wince/clib_port.h
        abbc/db-4.8.30/build_wince/db.h
        abbc/db-4.8.30/build_wince/db_config.h
        abbc/db-4.8.30/build_wince/db_int.h
        abbc/db-4.8.30/build_wince/errno.h
        abbc/db-4.8.30/build_windows/clib_port.h
        abbc/db-4.8.30/build_windows/db.h
        abbc/db-4.8.30/build_windows/db_config.h
        abbc/db-4.8.30/build_windows/db_cxx.h
        abbc/db-4.8.30/build_windows/db_int.h
        abbc/db-4.8.30/build_windows/dbkill.cpp
        abbc/db-4.8.30/build_windows/dbstl_common.h
        abbc/db-4.8.30/clib/atoi.c
        abbc/db-4.8.30/clib/atol.c
        abbc/db-4.8.30/clib/getcwd.c
        abbc/db-4.8.30/clib/getopt.c
        abbc/db-4.8.30/clib/isalpha.c
        abbc/db-4.8.30/clib/isdigit.c
        abbc/db-4.8.30/clib/isprint.c
        abbc/db-4.8.30/clib/isspace.c
        abbc/db-4.8.30/clib/memcmp.c
        abbc/db-4.8.30/clib/memmove.c
        abbc/db-4.8.30/clib/printf.c
        abbc/db-4.8.30/clib/qsort.c
        abbc/db-4.8.30/clib/raise.c
        abbc/db-4.8.30/clib/rand.c
        abbc/db-4.8.30/clib/snprintf.c
        abbc/db-4.8.30/clib/strcasecmp.c
        abbc/db-4.8.30/clib/strcat.c
        abbc/db-4.8.30/clib/strchr.c
        abbc/db-4.8.30/clib/strdup.c
        abbc/db-4.8.30/clib/strerror.c
        abbc/db-4.8.30/clib/strncat.c
        abbc/db-4.8.30/clib/strncmp.c
        abbc/db-4.8.30/clib/strrchr.c
        abbc/db-4.8.30/clib/strsep.c
        abbc/db-4.8.30/clib/strtol.c
        abbc/db-4.8.30/clib/strtoul.c
        abbc/db-4.8.30/clib/time.c
        abbc/db-4.8.30/common/crypto_stub.c
        abbc/db-4.8.30/common/db_byteorder.c
        abbc/db-4.8.30/common/db_compint.c
        abbc/db-4.8.30/common/db_err.c
        abbc/db-4.8.30/common/db_getlong.c
        abbc/db-4.8.30/common/db_idspace.c
        abbc/db-4.8.30/common/db_log2.c
        abbc/db-4.8.30/common/db_shash.c
        abbc/db-4.8.30/common/dbt.c
        abbc/db-4.8.30/common/mkpath.c
        abbc/db-4.8.30/common/openflags.c
        abbc/db-4.8.30/common/os_method.c
        abbc/db-4.8.30/common/util_arg.c
        abbc/db-4.8.30/common/util_cache.c
        abbc/db-4.8.30/common/util_log.c
        abbc/db-4.8.30/common/util_sig.c
        abbc/db-4.8.30/common/zerofill.c
        abbc/db-4.8.30/crypto/mersenne/mt19937db.c
        abbc/db-4.8.30/crypto/rijndael/rijndael-alg-fst.c
        abbc/db-4.8.30/crypto/rijndael/rijndael-alg-fst.h
        abbc/db-4.8.30/crypto/rijndael/rijndael-api-fst.c
        abbc/db-4.8.30/crypto/rijndael/rijndael-api-fst.h
        abbc/db-4.8.30/crypto/aes_method.c
        abbc/db-4.8.30/crypto/crypto.c
        abbc/db-4.8.30/cxx/cxx_db.cpp
        abbc/db-4.8.30/cxx/cxx_dbc.cpp
        abbc/db-4.8.30/cxx/cxx_dbt.cpp
        abbc/db-4.8.30/cxx/cxx_env.cpp
        abbc/db-4.8.30/cxx/cxx_except.cpp
        abbc/db-4.8.30/cxx/cxx_lock.cpp
        abbc/db-4.8.30/cxx/cxx_logc.cpp
        abbc/db-4.8.30/cxx/cxx_mpool.cpp
        abbc/db-4.8.30/cxx/cxx_multi.cpp
        abbc/db-4.8.30/cxx/cxx_seq.cpp
        abbc/db-4.8.30/cxx/cxx_txn.cpp
        abbc/db-4.8.30/db/crdel_auto.c
        abbc/db-4.8.30/db/crdel_autop.c
        abbc/db-4.8.30/db/crdel_rec.c
        abbc/db-4.8.30/db/db.c
        abbc/db-4.8.30/db/db_am.c
        abbc/db-4.8.30/db/db_auto.c
        abbc/db-4.8.30/db/db_autop.c
        abbc/db-4.8.30/db/db_cam.c
        abbc/db-4.8.30/db/db_cds.c
        abbc/db-4.8.30/db/db_conv.c
        abbc/db-4.8.30/db/db_dispatch.c
        abbc/db-4.8.30/db/db_dup.c
        abbc/db-4.8.30/db/db_iface.c
        abbc/db-4.8.30/db/db_join.c
        abbc/db-4.8.30/db/db_meta.c
        abbc/db-4.8.30/db/db_method.c
        abbc/db-4.8.30/db/db_open.c
        abbc/db-4.8.30/db/db_overflow.c
        abbc/db-4.8.30/db/db_ovfl_vrfy.c
        abbc/db-4.8.30/db/db_pr.c
        abbc/db-4.8.30/db/db_rec.c
        abbc/db-4.8.30/db/db_reclaim.c
        abbc/db-4.8.30/db/db_remove.c
        abbc/db-4.8.30/db/db_rename.c
        abbc/db-4.8.30/db/db_ret.c
        abbc/db-4.8.30/db/db_setid.c
        abbc/db-4.8.30/db/db_setlsn.c
        abbc/db-4.8.30/db/db_sort_multiple.c
        abbc/db-4.8.30/db/db_stati.c
        abbc/db-4.8.30/db/db_truncate.c
        abbc/db-4.8.30/db/db_upg.c
        abbc/db-4.8.30/db/db_upg_opd.c
        abbc/db-4.8.30/db/db_vrfy.c
        abbc/db-4.8.30/db/db_vrfy_stub.c
        abbc/db-4.8.30/db/db_vrfyutil.c
        abbc/db-4.8.30/db/partition.c
        abbc/db-4.8.30/db185/db185.c
        abbc/db-4.8.30/db_archive/db_archive.c
        abbc/db-4.8.30/db_checkpoint/db_checkpoint.c
        abbc/db-4.8.30/db_deadlock/db_deadlock.c
        abbc/db-4.8.30/db_dump/db_dump.c
        abbc/db-4.8.30/db_dump185/db_dump185.c
        abbc/db-4.8.30/db_hotbackup/db_hotbackup.c
        abbc/db-4.8.30/db_load/db_load.c
        abbc/db-4.8.30/db_printlog/db_printlog.c
        abbc/db-4.8.30/db_recover/db_recover.c
        abbc/db-4.8.30/db_sql/sqlite/keywordhash.h
        abbc/db-4.8.30/db_sql/sqlite/parse.c
        abbc/db-4.8.30/db_sql/sqlite/parse.h
        abbc/db-4.8.30/db_sql/sqlite/sqlite3.h
        abbc/db-4.8.30/db_sql/sqlite/sqliteInt.h
        abbc/db-4.8.30/db_sql/sqlite/sqliteLimit.h
        abbc/db-4.8.30/db_sql/sqlite/sqlprintf.c
        abbc/db-4.8.30/db_sql/buildpt.c
        abbc/db-4.8.30/db_sql/db_sql.c
        abbc/db-4.8.30/db_sql/db_sql.h
        abbc/db-4.8.30/db_sql/generate.c
        abbc/db-4.8.30/db_sql/generate_test.c
        abbc/db-4.8.30/db_sql/generate_verification.c
        abbc/db-4.8.30/db_sql/generation.h
        abbc/db-4.8.30/db_sql/generation_utils.c
        abbc/db-4.8.30/db_sql/hint_comment.c
        abbc/db-4.8.30/db_sql/parsefuncs.c
        abbc/db-4.8.30/db_sql/preparser.c
        abbc/db-4.8.30/db_sql/tokenize.c
        abbc/db-4.8.30/db_sql/utils.c
        abbc/db-4.8.30/db_stat/db_stat.c
        abbc/db-4.8.30/db_upgrade/db_upgrade.c
        abbc/db-4.8.30/db_verify/db_verify.c
        abbc/db-4.8.30/dbinc/atomic.h
        abbc/db-4.8.30/dbinc/btree.h
        abbc/db-4.8.30/dbinc/clock.h
        abbc/db-4.8.30/dbinc/crypto.h
        abbc/db-4.8.30/dbinc/cxx_int.h
        abbc/db-4.8.30/dbinc/db_am.h
        abbc/db-4.8.30/dbinc/db_dispatch.h
        abbc/db-4.8.30/dbinc/db_join.h
        abbc/db-4.8.30/dbinc/db_page.h
        abbc/db-4.8.30/dbinc/db_swap.h
        abbc/db-4.8.30/dbinc/db_upgrade.h
        abbc/db-4.8.30/dbinc/db_verify.h
        abbc/db-4.8.30/dbinc/debug.h
        abbc/db-4.8.30/dbinc/fop.h
        abbc/db-4.8.30/dbinc/globals.h
        abbc/db-4.8.30/dbinc/hash.h
        abbc/db-4.8.30/dbinc/hmac.h
        abbc/db-4.8.30/dbinc/lock.h
        abbc/db-4.8.30/dbinc/log.h
        abbc/db-4.8.30/dbinc/mp.h
        abbc/db-4.8.30/dbinc/mutex.h
        abbc/db-4.8.30/dbinc/mutex_int.h
        abbc/db-4.8.30/dbinc/os.h
        abbc/db-4.8.30/dbinc/partition.h
        abbc/db-4.8.30/dbinc/qam.h
        abbc/db-4.8.30/dbinc/queue.h
        abbc/db-4.8.30/dbinc/region.h
        abbc/db-4.8.30/dbinc/rep.h
        abbc/db-4.8.30/dbinc/repmgr.h
        abbc/db-4.8.30/dbinc/shqueue.h
        abbc/db-4.8.30/dbinc/tcl_db.h
        abbc/db-4.8.30/dbinc/txn.h
        abbc/db-4.8.30/dbinc/win_db.h
        abbc/db-4.8.30/dbinc_auto/btree_auto.h
        abbc/db-4.8.30/dbinc_auto/btree_ext.h
        abbc/db-4.8.30/dbinc_auto/clib_ext.h
        abbc/db-4.8.30/dbinc_auto/common_ext.h
        abbc/db-4.8.30/dbinc_auto/crdel_auto.h
        abbc/db-4.8.30/dbinc_auto/crypto_ext.h
        abbc/db-4.8.30/dbinc_auto/db_auto.h
        abbc/db-4.8.30/dbinc_auto/db_ext.h
        abbc/db-4.8.30/dbinc_auto/dbreg_auto.h
        abbc/db-4.8.30/dbinc_auto/dbreg_ext.h
        abbc/db-4.8.30/dbinc_auto/env_ext.h
        abbc/db-4.8.30/dbinc_auto/fileops_auto.h
        abbc/db-4.8.30/dbinc_auto/fileops_ext.h
        abbc/db-4.8.30/dbinc_auto/hash_auto.h
        abbc/db-4.8.30/dbinc_auto/hash_ext.h
        abbc/db-4.8.30/dbinc_auto/hmac_ext.h
        abbc/db-4.8.30/dbinc_auto/lock_ext.h
        abbc/db-4.8.30/dbinc_auto/log_ext.h
        abbc/db-4.8.30/dbinc_auto/mp_ext.h
        abbc/db-4.8.30/dbinc_auto/mutex_ext.h
        abbc/db-4.8.30/dbinc_auto/os_ext.h
        abbc/db-4.8.30/dbinc_auto/qam_auto.h
        abbc/db-4.8.30/dbinc_auto/qam_ext.h
        abbc/db-4.8.30/dbinc_auto/rep_auto.h
        abbc/db-4.8.30/dbinc_auto/rep_ext.h
        abbc/db-4.8.30/dbinc_auto/repmgr_auto.h
        abbc/db-4.8.30/dbinc_auto/repmgr_ext.h
        abbc/db-4.8.30/dbinc_auto/sequence_ext.h
        abbc/db-4.8.30/dbinc_auto/tcl_ext.h
        abbc/db-4.8.30/dbinc_auto/txn_auto.h
        abbc/db-4.8.30/dbinc_auto/txn_ext.h
        abbc/db-4.8.30/dbm/dbm.c
        abbc/db-4.8.30/dbreg/dbreg.c
        abbc/db-4.8.30/dbreg/dbreg_auto.c
        abbc/db-4.8.30/dbreg/dbreg_autop.c
        abbc/db-4.8.30/dbreg/dbreg_rec.c
        abbc/db-4.8.30/dbreg/dbreg_stat.c
        abbc/db-4.8.30/dbreg/dbreg_util.c
        abbc/db-4.8.30/dist/brew/brew_posix.h
        abbc/db-4.8.30/dist/api_flags.c
        abbc/db-4.8.30/dist/errno.h
        abbc/db-4.8.30/env/env_alloc.c
        abbc/db-4.8.30/env/env_config.c
        abbc/db-4.8.30/env/env_failchk.c
        abbc/db-4.8.30/env/env_file.c
        abbc/db-4.8.30/env/env_globals.c
        abbc/db-4.8.30/env/env_method.c
        abbc/db-4.8.30/env/env_name.c
        abbc/db-4.8.30/env/env_open.c
        abbc/db-4.8.30/env/env_recover.c
        abbc/db-4.8.30/env/env_region.c
        abbc/db-4.8.30/env/env_register.c
        abbc/db-4.8.30/env/env_sig.c
        abbc/db-4.8.30/env/env_stat.c
        abbc/db-4.8.30/examples_c/csv/code.c
        abbc/db-4.8.30/examples_c/csv/csv.h
        abbc/db-4.8.30/examples_c/csv/csv_extern.h
        abbc/db-4.8.30/examples_c/csv/db.c
        abbc/db-4.8.30/examples_c/csv/DbRecord.c
        abbc/db-4.8.30/examples_c/csv/load.c
        abbc/db-4.8.30/examples_c/csv/load_main.c
        abbc/db-4.8.30/examples_c/csv/query.c
        abbc/db-4.8.30/examples_c/csv/query_main.c
        abbc/db-4.8.30/examples_c/csv/util.c
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec.c
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec.h
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec_auto.c
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec_auto.h
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec_autop.c
        abbc/db-4.8.30/examples_c/ex_apprec/ex_apprec_rec.c
        abbc/db-4.8.30/examples_c/ex_rep/base/rep_base.c
        abbc/db-4.8.30/examples_c/ex_rep/base/rep_base.h
        abbc/db-4.8.30/examples_c/ex_rep/base/rep_msg.c
        abbc/db-4.8.30/examples_c/ex_rep/base/rep_net.c
        abbc/db-4.8.30/examples_c/ex_rep/common/rep_common.c
        abbc/db-4.8.30/examples_c/ex_rep/common/rep_common.h
        abbc/db-4.8.30/examples_c/ex_rep/mgr/rep_mgr.c
        abbc/db-4.8.30/examples_c/ex_rep_gsg/rep_mgr_gsg.c
        abbc/db-4.8.30/examples_c/ex_rep_gsg/simple_txn.c
        abbc/db-4.8.30/examples_c/getting_started/example_database_load.c
        abbc/db-4.8.30/examples_c/getting_started/example_database_read.c
        abbc/db-4.8.30/examples_c/getting_started/gettingstarted_common.c
        abbc/db-4.8.30/examples_c/getting_started/gettingstarted_common.h
        abbc/db-4.8.30/examples_c/txn_guide/txn_guide.c
        abbc/db-4.8.30/examples_c/txn_guide/txn_guide_inmemory.c
        abbc/db-4.8.30/examples_c/bench_001.c
        abbc/db-4.8.30/examples_c/ex_access.c
        abbc/db-4.8.30/examples_c/ex_btrec.c
        abbc/db-4.8.30/examples_c/ex_dbclient.c
        abbc/db-4.8.30/examples_c/ex_env.c
        abbc/db-4.8.30/examples_c/ex_lock.c
        abbc/db-4.8.30/examples_c/ex_mpool.c
        abbc/db-4.8.30/examples_c/ex_sequence.c
        abbc/db-4.8.30/examples_c/ex_stream.c
        abbc/db-4.8.30/examples_c/ex_thread.c
        abbc/db-4.8.30/examples_c/ex_tpcb.c
        abbc/db-4.8.30/examples_cxx/excxx_repquote/dbc_auto.h
        abbc/db-4.8.30/examples_cxx/excxx_repquote/RepConfigInfo.cpp
        abbc/db-4.8.30/examples_cxx/excxx_repquote/RepConfigInfo.h
        abbc/db-4.8.30/examples_cxx/excxx_repquote/RepQuoteExample.cpp
        abbc/db-4.8.30/examples_cxx/excxx_repquote_gsg/RepConfigInfo.h
        abbc/db-4.8.30/examples_cxx/excxx_repquote_gsg/RepMgrGSG.cpp
        abbc/db-4.8.30/examples_cxx/excxx_repquote_gsg/SimpleConfigInfo.h
        abbc/db-4.8.30/examples_cxx/excxx_repquote_gsg/SimpleTxn.cpp
        abbc/db-4.8.30/examples_cxx/getting_started/excxx_example_database_load.cpp
        abbc/db-4.8.30/examples_cxx/getting_started/excxx_example_database_read.cpp
        abbc/db-4.8.30/examples_cxx/getting_started/gettingStartedCommon.hpp
        abbc/db-4.8.30/examples_cxx/getting_started/MyDb.cpp
        abbc/db-4.8.30/examples_cxx/getting_started/MyDb.hpp
        abbc/db-4.8.30/examples_cxx/txn_guide/TxnGuide.cpp
        abbc/db-4.8.30/examples_cxx/txn_guide/TxnGuideInMemory.cpp
        abbc/db-4.8.30/examples_cxx/wce_tpcb/newres.h
        abbc/db-4.8.30/examples_cxx/wce_tpcb/resource.h
        abbc/db-4.8.30/examples_cxx/wce_tpcb/TpcbExample.cpp
        abbc/db-4.8.30/examples_cxx/wce_tpcb/TpcbExample.h
        abbc/db-4.8.30/examples_cxx/wce_tpcb/TpcbUI.cpp
        abbc/db-4.8.30/examples_cxx/AccessExample.cpp
        abbc/db-4.8.30/examples_cxx/BtRecExample.cpp
        abbc/db-4.8.30/examples_cxx/EnvExample.cpp
        abbc/db-4.8.30/examples_cxx/LockExample.cpp
        abbc/db-4.8.30/examples_cxx/MpoolExample.cpp
        abbc/db-4.8.30/examples_cxx/SequenceExample.cpp
        abbc/db-4.8.30/examples_cxx/TpcbExample.cpp
        abbc/db-4.8.30/examples_stl/repquote/StlRepConfigInfo.cpp
        abbc/db-4.8.30/examples_stl/repquote/StlRepConfigInfo.h
        abbc/db-4.8.30/examples_stl/repquote/StlRepQuoteExample.cpp
        abbc/db-4.8.30/examples_stl/StlAccessExample.cpp
        abbc/db-4.8.30/examples_stl/StlTpcbExample.cpp
        abbc/db-4.8.30/examples_stl/StlTransactionGuideExample.cpp
        abbc/db-4.8.30/fileops/fileops_auto.c
        abbc/db-4.8.30/fileops/fileops_autop.c
        abbc/db-4.8.30/fileops/fop_basic.c
        abbc/db-4.8.30/fileops/fop_rec.c
        abbc/db-4.8.30/fileops/fop_util.c
        abbc/db-4.8.30/hash/hash.c
        abbc/db-4.8.30/hash/hash_auto.c
        abbc/db-4.8.30/hash/hash_autop.c
        abbc/db-4.8.30/hash/hash_conv.c
        abbc/db-4.8.30/hash/hash_dup.c
        abbc/db-4.8.30/hash/hash_func.c
        abbc/db-4.8.30/hash/hash_meta.c
        abbc/db-4.8.30/hash/hash_method.c
        abbc/db-4.8.30/hash/hash_open.c
        abbc/db-4.8.30/hash/hash_page.c
        abbc/db-4.8.30/hash/hash_rec.c
        abbc/db-4.8.30/hash/hash_reclaim.c
        abbc/db-4.8.30/hash/hash_stat.c
        abbc/db-4.8.30/hash/hash_stub.c
        abbc/db-4.8.30/hash/hash_upgrade.c
        abbc/db-4.8.30/hash/hash_verify.c
        abbc/db-4.8.30/hmac/hmac.c
        abbc/db-4.8.30/hmac/sha1.c
        abbc/db-4.8.30/hsearch/hsearch.c
        abbc/db-4.8.30/libdb_csharp/db.i
        abbc/db-4.8.30/libdb_csharp/db_csharp_wrap.c
        abbc/db-4.8.30/libdb_java/db.i
        abbc/db-4.8.30/libdb_java/db_java.i
        abbc/db-4.8.30/libdb_java/db_java_wrap.c
        abbc/db-4.8.30/libdb_java/java_callbacks.i
        abbc/db-4.8.30/libdb_java/java_except.i
        abbc/db-4.8.30/libdb_java/java_stat.i
        abbc/db-4.8.30/libdb_java/java_stat_auto.c
        abbc/db-4.8.30/libdb_java/java_typemaps.i
        abbc/db-4.8.30/libdb_java/java_util.i
        abbc/db-4.8.30/lock/lock.c
        abbc/db-4.8.30/lock/lock_deadlock.c
        abbc/db-4.8.30/lock/lock_failchk.c
        abbc/db-4.8.30/lock/lock_id.c
        abbc/db-4.8.30/lock/lock_list.c
        abbc/db-4.8.30/lock/lock_method.c
        abbc/db-4.8.30/lock/lock_region.c
        abbc/db-4.8.30/lock/lock_stat.c
        abbc/db-4.8.30/lock/lock_stub.c
        abbc/db-4.8.30/lock/lock_timer.c
        abbc/db-4.8.30/lock/lock_util.c
        abbc/db-4.8.30/log/log.c
        abbc/db-4.8.30/log/log_archive.c
        abbc/db-4.8.30/log/log_compare.c
        abbc/db-4.8.30/log/log_debug.c
        abbc/db-4.8.30/log/log_get.c
        abbc/db-4.8.30/log/log_method.c
        abbc/db-4.8.30/log/log_put.c
        abbc/db-4.8.30/log/log_stat.c
        abbc/db-4.8.30/mod_db4/mm_hash.c
        abbc/db-4.8.30/mod_db4/mm_hash.h
        abbc/db-4.8.30/mod_db4/mod_db4.c
        abbc/db-4.8.30/mod_db4/mod_db4_export.h
        abbc/db-4.8.30/mod_db4/sem_utils.c
        abbc/db-4.8.30/mod_db4/sem_utils.h
        abbc/db-4.8.30/mod_db4/skiplist.c
        abbc/db-4.8.30/mod_db4/skiplist.h
        abbc/db-4.8.30/mod_db4/utils.c
        abbc/db-4.8.30/mod_db4/utils.h
        abbc/db-4.8.30/mp/mp_alloc.c
        abbc/db-4.8.30/mp/mp_bh.c
        abbc/db-4.8.30/mp/mp_fget.c
        abbc/db-4.8.30/mp/mp_fmethod.c
        abbc/db-4.8.30/mp/mp_fopen.c
        abbc/db-4.8.30/mp/mp_fput.c
        abbc/db-4.8.30/mp/mp_fset.c
        abbc/db-4.8.30/mp/mp_method.c
        abbc/db-4.8.30/mp/mp_mvcc.c
        abbc/db-4.8.30/mp/mp_region.c
        abbc/db-4.8.30/mp/mp_register.c
        abbc/db-4.8.30/mp/mp_resize.c
        abbc/db-4.8.30/mp/mp_stat.c
        abbc/db-4.8.30/mp/mp_sync.c
        abbc/db-4.8.30/mp/mp_trickle.c
        abbc/db-4.8.30/mutex/mut_alloc.c
        abbc/db-4.8.30/mutex/mut_failchk.c
        abbc/db-4.8.30/mutex/mut_fcntl.c
        abbc/db-4.8.30/mutex/mut_method.c
        abbc/db-4.8.30/mutex/mut_pthread.c
        abbc/db-4.8.30/mutex/mut_region.c
        abbc/db-4.8.30/mutex/mut_stat.c
        abbc/db-4.8.30/mutex/mut_stub.c
        abbc/db-4.8.30/mutex/mut_tas.c
        abbc/db-4.8.30/mutex/mut_win32.c
        abbc/db-4.8.30/mutex/test_mutex.c
        abbc/db-4.8.30/os/os_abort.c
        abbc/db-4.8.30/os/os_abs.c
        abbc/db-4.8.30/os/os_addrinfo.c
        abbc/db-4.8.30/os/os_alloc.c
        abbc/db-4.8.30/os/os_clock.c
        abbc/db-4.8.30/os/os_config.c
        abbc/db-4.8.30/os/os_cpu.c
        abbc/db-4.8.30/os/os_ctime.c
        abbc/db-4.8.30/os/os_dir.c
        abbc/db-4.8.30/os/os_errno.c
        abbc/db-4.8.30/os/os_fid.c
        abbc/db-4.8.30/os/os_flock.c
        abbc/db-4.8.30/os/os_fsync.c
        abbc/db-4.8.30/os/os_getenv.c
        abbc/db-4.8.30/os/os_handle.c
        abbc/db-4.8.30/os/os_map.c
        abbc/db-4.8.30/os/os_mkdir.c
        abbc/db-4.8.30/os/os_open.c
        abbc/db-4.8.30/os/os_pid.c
        abbc/db-4.8.30/os/os_rename.c
        abbc/db-4.8.30/os/os_root.c
        abbc/db-4.8.30/os/os_rpath.c
        abbc/db-4.8.30/os/os_rw.c
        abbc/db-4.8.30/os/os_seek.c
        abbc/db-4.8.30/os/os_stack.c
        abbc/db-4.8.30/os/os_stat.c
        abbc/db-4.8.30/os/os_tmpdir.c
        abbc/db-4.8.30/os/os_truncate.c
        abbc/db-4.8.30/os/os_uid.c
        abbc/db-4.8.30/os/os_unlink.c
        abbc/db-4.8.30/os/os_yield.c
        abbc/db-4.8.30/os_brew/ctime.c
        abbc/db-4.8.30/os_brew/fclose.c
        abbc/db-4.8.30/os_brew/fgetc.c
        abbc/db-4.8.30/os_brew/fgets.c
        abbc/db-4.8.30/os_brew/fopen.c
        abbc/db-4.8.30/os_brew/fwrite.c
        abbc/db-4.8.30/os_brew/getcwd.c
        abbc/db-4.8.30/os_brew/globals.c
        abbc/db-4.8.30/os_brew/localtime.c
        abbc/db-4.8.30/os_brew/os_abort.c
        abbc/db-4.8.30/os_brew/os_abs.c
        abbc/db-4.8.30/os_brew/os_clock.c
        abbc/db-4.8.30/os_brew/os_config.c
        abbc/db-4.8.30/os_brew/os_dir.c
        abbc/db-4.8.30/os_brew/os_errno.c
        abbc/db-4.8.30/os_brew/os_handle.c
        abbc/db-4.8.30/os_brew/os_mkdir.c
        abbc/db-4.8.30/os_brew/os_open.c
        abbc/db-4.8.30/os_brew/os_pid.c
        abbc/db-4.8.30/os_brew/os_rename.c
        abbc/db-4.8.30/os_brew/os_rw.c
        abbc/db-4.8.30/os_brew/os_seek.c
        abbc/db-4.8.30/os_brew/os_stat.c
        abbc/db-4.8.30/os_brew/os_truncate.c
        abbc/db-4.8.30/os_brew/os_unlink.c
        abbc/db-4.8.30/os_brew/os_yield.c
        abbc/db-4.8.30/os_qnx/os_qnx_fsync.c
        abbc/db-4.8.30/os_qnx/os_qnx_open.c
        abbc/db-4.8.30/os_s60/os_config.c
        abbc/db-4.8.30/os_vxworks/os_vx_abs.c
        abbc/db-4.8.30/os_vxworks/os_vx_config.c
        abbc/db-4.8.30/os_vxworks/os_vx_map.c
        abbc/db-4.8.30/os_vxworks/os_vx_rpath.c
        abbc/db-4.8.30/os_vxworks/os_vx_yield.c
        abbc/db-4.8.30/os_windows/ce_ctime.c
        abbc/db-4.8.30/os_windows/os_abs.c
        abbc/db-4.8.30/os_windows/os_clock.c
        abbc/db-4.8.30/os_windows/os_config.c
        abbc/db-4.8.30/os_windows/os_cpu.c
        abbc/db-4.8.30/os_windows/os_dir.c
        abbc/db-4.8.30/os_windows/os_errno.c
        abbc/db-4.8.30/os_windows/os_fid.c
        abbc/db-4.8.30/os_windows/os_flock.c
        abbc/db-4.8.30/os_windows/os_fsync.c
        abbc/db-4.8.30/os_windows/os_getenv.c
        abbc/db-4.8.30/os_windows/os_handle.c
        abbc/db-4.8.30/os_windows/os_map.c
        abbc/db-4.8.30/os_windows/os_mkdir.c
        abbc/db-4.8.30/os_windows/os_open.c
        abbc/db-4.8.30/os_windows/os_rename.c
        abbc/db-4.8.30/os_windows/os_rw.c
        abbc/db-4.8.30/os_windows/os_seek.c
        abbc/db-4.8.30/os_windows/os_stat.c
        abbc/db-4.8.30/os_windows/os_truncate.c
        abbc/db-4.8.30/os_windows/os_unlink.c
        abbc/db-4.8.30/os_windows/os_yield.c
        abbc/db-4.8.30/perl/BerkeleyDB/constants.h
        abbc/db-4.8.30/perl/BerkeleyDB/ppport.h
        abbc/db-4.8.30/perl/DB_File/fallback.h
        abbc/db-4.8.30/perl/DB_File/ppport.h
        abbc/db-4.8.30/perl/DB_File/version.c
        abbc/db-4.8.30/php_db4/db4.cpp
        abbc/db-4.8.30/php_db4/php_db4.h
        abbc/db-4.8.30/qam/qam.c
        abbc/db-4.8.30/qam/qam_auto.c
        abbc/db-4.8.30/qam/qam_autop.c
        abbc/db-4.8.30/qam/qam_conv.c
        abbc/db-4.8.30/qam/qam_files.c
        abbc/db-4.8.30/qam/qam_method.c
        abbc/db-4.8.30/qam/qam_open.c
        abbc/db-4.8.30/qam/qam_rec.c
        abbc/db-4.8.30/qam/qam_stat.c
        abbc/db-4.8.30/qam/qam_stub.c
        abbc/db-4.8.30/qam/qam_upgrade.c
        abbc/db-4.8.30/qam/qam_verify.c
        abbc/db-4.8.30/rep/rep_auto.c
        abbc/db-4.8.30/rep/rep_backup.c
        abbc/db-4.8.30/rep/rep_elect.c
        abbc/db-4.8.30/rep/rep_lease.c
        abbc/db-4.8.30/rep/rep_log.c
        abbc/db-4.8.30/rep/rep_method.c
        abbc/db-4.8.30/rep/rep_record.c
        abbc/db-4.8.30/rep/rep_region.c
        abbc/db-4.8.30/rep/rep_stat.c
        abbc/db-4.8.30/rep/rep_stub.c
        abbc/db-4.8.30/rep/rep_util.c
        abbc/db-4.8.30/rep/rep_verify.c
        abbc/db-4.8.30/repmgr/repmgr_auto.c
        abbc/db-4.8.30/repmgr/repmgr_elect.c
        abbc/db-4.8.30/repmgr/repmgr_method.c
        abbc/db-4.8.30/repmgr/repmgr_msg.c
        abbc/db-4.8.30/repmgr/repmgr_net.c
        abbc/db-4.8.30/repmgr/repmgr_posix.c
        abbc/db-4.8.30/repmgr/repmgr_queue.c
        abbc/db-4.8.30/repmgr/repmgr_sel.c
        abbc/db-4.8.30/repmgr/repmgr_stat.c
        abbc/db-4.8.30/repmgr/repmgr_stub.c
        abbc/db-4.8.30/repmgr/repmgr_util.c
        abbc/db-4.8.30/repmgr/repmgr_windows.c
        abbc/db-4.8.30/sequence/seq_stat.c
        abbc/db-4.8.30/sequence/sequence.c
        abbc/db-4.8.30/stl/dbstl_base_iterator.h
        abbc/db-4.8.30/stl/dbstl_container.cpp
        abbc/db-4.8.30/stl/dbstl_container.h
        abbc/db-4.8.30/stl/dbstl_dbc.h
        abbc/db-4.8.30/stl/dbstl_dbt.h
        abbc/db-4.8.30/stl/dbstl_element_ref.h
        abbc/db-4.8.30/stl/dbstl_exception.h
        abbc/db-4.8.30/stl/dbstl_inner_utility.h
        abbc/db-4.8.30/stl/dbstl_map.h
        abbc/db-4.8.30/stl/dbstl_resource_manager.cpp
        abbc/db-4.8.30/stl/dbstl_resource_manager.h
        abbc/db-4.8.30/stl/dbstl_set.h
        abbc/db-4.8.30/stl/dbstl_utility.h
        abbc/db-4.8.30/stl/dbstl_vector.h
        abbc/db-4.8.30/tcl/tcl_compat.c
        abbc/db-4.8.30/tcl/tcl_db.c
        abbc/db-4.8.30/tcl/tcl_db_pkg.c
        abbc/db-4.8.30/tcl/tcl_dbcursor.c
        abbc/db-4.8.30/tcl/tcl_env.c
        abbc/db-4.8.30/tcl/tcl_internal.c
        abbc/db-4.8.30/tcl/tcl_lock.c
        abbc/db-4.8.30/tcl/tcl_log.c
        abbc/db-4.8.30/tcl/tcl_mp.c
        abbc/db-4.8.30/tcl/tcl_mutex.c
        abbc/db-4.8.30/tcl/tcl_rep.c
        abbc/db-4.8.30/tcl/tcl_seq.c
        abbc/db-4.8.30/tcl/tcl_txn.c
        abbc/db-4.8.30/tcl/tcl_util.c
        abbc/db-4.8.30/test/scr015/TestConstruct01.cpp
        abbc/db-4.8.30/test/scr015/TestGetSetMethods.cpp
        abbc/db-4.8.30/test/scr015/TestKeyRange.cpp
        abbc/db-4.8.30/test/scr015/TestLogc.cpp
        abbc/db-4.8.30/test/scr015/TestSimpleAccess.cpp
        abbc/db-4.8.30/test/scr015/TestTruncate.cpp
        abbc/db-4.8.30/test/scr017/t.c
        abbc/db-4.8.30/test/scr018/t.c
        abbc/db-4.8.30/test/scr021/t.c
        abbc/db-4.8.30/test/scr023/q.c
        abbc/db-4.8.30/test/scr025/TestMulti.cpp
        abbc/db-4.8.30/test/scr028/t.c
        abbc/db-4.8.30/test/scr029/t.c
        abbc/db-4.8.30/test_micro/source/b_curalloc.c
        abbc/db-4.8.30/test_micro/source/b_curwalk.c
        abbc/db-4.8.30/test_micro/source/b_del.c
        abbc/db-4.8.30/test_micro/source/b_get.c
        abbc/db-4.8.30/test_micro/source/b_inmem.c
        abbc/db-4.8.30/test_micro/source/b_latch.c
        abbc/db-4.8.30/test_micro/source/b_load.c
        abbc/db-4.8.30/test_micro/source/b_open.c
        abbc/db-4.8.30/test_micro/source/b_put.c
        abbc/db-4.8.30/test_micro/source/b_recover.c
        abbc/db-4.8.30/test_micro/source/b_txn.c
        abbc/db-4.8.30/test_micro/source/b_txn_write.c
        abbc/db-4.8.30/test_micro/source/b_uname.c
        abbc/db-4.8.30/test_micro/source/b_util.c
        abbc/db-4.8.30/test_micro/source/b_workload.c
        abbc/db-4.8.30/test_micro/source/b_workload.h
        abbc/db-4.8.30/test_micro/source/bench.h
        abbc/db-4.8.30/test_micro/source/test_micro.c
        abbc/db-4.8.30/test_stl/base/ptype.h
        abbc/db-4.8.30/test_stl/base/test.h
        abbc/db-4.8.30/test_stl/base/test_assoc.h
        abbc/db-4.8.30/test_stl/base/test_dbstl.cpp
        abbc/db-4.8.30/test_stl/base/test_mt.h
        abbc/db-4.8.30/test_stl/base/test_util.cpp
        abbc/db-4.8.30/test_stl/base/test_util.h
        abbc/db-4.8.30/test_stl/base/test_vector.h
        abbc/db-4.8.30/txn/txn.c
        abbc/db-4.8.30/txn/txn_auto.c
        abbc/db-4.8.30/txn/txn_autop.c
        abbc/db-4.8.30/txn/txn_chkpt.c
        abbc/db-4.8.30/txn/txn_failchk.c
        abbc/db-4.8.30/txn/txn_method.c
        abbc/db-4.8.30/txn/txn_rec.c
        abbc/db-4.8.30/txn/txn_recover.c
        abbc/db-4.8.30/txn/txn_region.c
        abbc/db-4.8.30/txn/txn_stat.c
        abbc/db-4.8.30/txn/txn_util.c
        abbc/src/build/build.h
        abbc/src/build/moc_aboutdialog.cpp
        abbc/src/build/moc_addressbookpage.cpp
        abbc/src/build/moc_addresstablemodel.cpp
        abbc/src/build/moc_askpassphrasedialog.cpp
        abbc/src/build/moc_bitcoinaddressvalidator.cpp
        abbc/src/build/moc_bitcoinamountfield.cpp
        abbc/src/build/moc_bitcoingui.cpp
        abbc/src/build/moc_blockbrowser.cpp
        abbc/src/build/moc_charitydialog.cpp
        abbc/src/build/moc_chatwindow.cpp
        abbc/src/build/moc_clientmodel.cpp
        abbc/src/build/moc_coincontroldialog.cpp
        abbc/src/build/moc_coincontroltreewidget.cpp
        abbc/src/build/moc_csvmodelwriter.cpp
        abbc/src/build/moc_editaddressdialog.cpp
        abbc/src/build/moc_guiutil.cpp
        abbc/src/build/moc_macdockiconhandler.cpp
        abbc/src/build/moc_monitoreddatamapper.cpp
        abbc/src/build/moc_notificator.cpp
        abbc/src/build/moc_optionsdialog.cpp
        abbc/src/build/moc_optionsmodel.cpp
        abbc/src/build/moc_overviewpage.cpp
        abbc/src/build/moc_predefs.h
        abbc/src/build/moc_qrcodedialog.cpp
        abbc/src/build/moc_qvalidatedlineedit.cpp
        abbc/src/build/moc_qvaluecombobox.cpp
        abbc/src/build/moc_rpcconsole.cpp
        abbc/src/build/moc_sendcoinsdialog.cpp
        abbc/src/build/moc_sendcoinsentry.cpp
        abbc/src/build/moc_serveur.cpp
        abbc/src/build/moc_signverifymessagedialog.cpp
        abbc/src/build/moc_statisticspage.cpp
        abbc/src/build/moc_transactiondesc.cpp
        abbc/src/build/moc_transactiondescdialog.cpp
        abbc/src/build/moc_transactionfilterproxy.cpp
        abbc/src/build/moc_transactiontablemodel.cpp
        abbc/src/build/moc_transactionview.cpp
        abbc/src/build/moc_walletmodel.cpp
        abbc/src/build/ui_aboutdialog.h
        abbc/src/build/ui_addressbookpage.h
        abbc/src/build/ui_askpassphrasedialog.h
        abbc/src/build/ui_blockbrowser.h
        abbc/src/build/ui_charitydialog.h
        abbc/src/build/ui_chatwindow.h
        abbc/src/build/ui_coincontroldialog.h
        abbc/src/build/ui_editaddressdialog.h
        abbc/src/build/ui_optionsdialog.h
        abbc/src/build/ui_overviewpage.h
        abbc/src/build/ui_qrcodedialog.h
        abbc/src/build/ui_rpcconsole.h
        abbc/src/build/ui_sendcoinsdialog.h
        abbc/src/build/ui_sendcoinsentry.h
        abbc/src/build/ui_signverifymessagedialog.h
        abbc/src/build/ui_statisticspage.h
        abbc/src/build/ui_transactiondescdialog.h
        abbc/src/json/json_spirit.h
        abbc/src/json/json_spirit_error_position.h
        abbc/src/json/json_spirit_reader.cpp
        abbc/src/json/json_spirit_reader.h
        abbc/src/json/json_spirit_reader_template.h
        abbc/src/json/json_spirit_stream_reader.h
        abbc/src/json/json_spirit_utils.h
        abbc/src/json/json_spirit_value.cpp
        abbc/src/json/json_spirit_value.h
        abbc/src/json/json_spirit_writer.cpp
        abbc/src/json/json_spirit_writer.h
        abbc/src/json/json_spirit_writer_template.h
        abbc/src/leveldb/db/autocompact_test.cc
        abbc/src/leveldb/db/builder.cc
        abbc/src/leveldb/db/builder.h
        abbc/src/leveldb/db/c.cc
        abbc/src/leveldb/db/c_test.c
        abbc/src/leveldb/db/corruption_test.cc
        abbc/src/leveldb/db/db_bench.cc
        abbc/src/leveldb/db/db_impl.cc
        abbc/src/leveldb/db/db_impl.h
        abbc/src/leveldb/db/db_iter.cc
        abbc/src/leveldb/db/db_iter.h
        abbc/src/leveldb/db/db_test.cc
        abbc/src/leveldb/db/dbformat.cc
        abbc/src/leveldb/db/dbformat.h
        abbc/src/leveldb/db/dbformat_test.cc
        abbc/src/leveldb/db/filename.cc
        abbc/src/leveldb/db/filename.h
        abbc/src/leveldb/db/filename_test.cc
        abbc/src/leveldb/db/leveldb_main.cc
        abbc/src/leveldb/db/log_format.h
        abbc/src/leveldb/db/log_reader.cc
        abbc/src/leveldb/db/log_reader.h
        abbc/src/leveldb/db/log_test.cc
        abbc/src/leveldb/db/log_writer.cc
        abbc/src/leveldb/db/log_writer.h
        abbc/src/leveldb/db/memtable.cc
        abbc/src/leveldb/db/memtable.h
        abbc/src/leveldb/db/repair.cc
        abbc/src/leveldb/db/skiplist.h
        abbc/src/leveldb/db/skiplist_test.cc
        abbc/src/leveldb/db/snapshot.h
        abbc/src/leveldb/db/table_cache.cc
        abbc/src/leveldb/db/table_cache.h
        abbc/src/leveldb/db/version_edit.cc
        abbc/src/leveldb/db/version_edit.h
        abbc/src/leveldb/db/version_edit_test.cc
        abbc/src/leveldb/db/version_set.cc
        abbc/src/leveldb/db/version_set.h
        abbc/src/leveldb/db/version_set_test.cc
        abbc/src/leveldb/db/write_batch.cc
        abbc/src/leveldb/db/write_batch_internal.h
        abbc/src/leveldb/db/write_batch_test.cc
        abbc/src/leveldb/doc/bench/db_bench_sqlite3.cc
        abbc/src/leveldb/doc/bench/db_bench_tree_db.cc
        abbc/src/leveldb/helpers/memenv/memenv.cc
        abbc/src/leveldb/helpers/memenv/memenv.h
        abbc/src/leveldb/helpers/memenv/memenv_test.cc
        abbc/src/leveldb/include/leveldb/c.h
        abbc/src/leveldb/include/leveldb/cache.h
        abbc/src/leveldb/include/leveldb/comparator.h
        abbc/src/leveldb/include/leveldb/db.h
        abbc/src/leveldb/include/leveldb/env.h
        abbc/src/leveldb/include/leveldb/filter_policy.h
        abbc/src/leveldb/include/leveldb/iterator.h
        abbc/src/leveldb/include/leveldb/options.h
        abbc/src/leveldb/include/leveldb/slice.h
        abbc/src/leveldb/include/leveldb/status.h
        abbc/src/leveldb/include/leveldb/table.h
        abbc/src/leveldb/include/leveldb/table_builder.h
        abbc/src/leveldb/include/leveldb/write_batch.h
        abbc/src/leveldb/issues/issue178_test.cc
        abbc/src/leveldb/issues/issue200_test.cc
        abbc/src/leveldb/port/win/stdint.h
        abbc/src/leveldb/port/atomic_pointer.h
        abbc/src/leveldb/port/port.h
        abbc/src/leveldb/port/port_example.h
        abbc/src/leveldb/port/port_posix.cc
        abbc/src/leveldb/port/port_posix.h
        abbc/src/leveldb/port/port_win.cc
        abbc/src/leveldb/port/port_win.h
        abbc/src/leveldb/port/thread_annotations.h
        abbc/src/leveldb/table/block.cc
        abbc/src/leveldb/table/block.h
        abbc/src/leveldb/table/block_builder.cc
        abbc/src/leveldb/table/block_builder.h
        abbc/src/leveldb/table/filter_block.cc
        abbc/src/leveldb/table/filter_block.h
        abbc/src/leveldb/table/filter_block_test.cc
        abbc/src/leveldb/table/format.cc
        abbc/src/leveldb/table/format.h
        abbc/src/leveldb/table/iterator.cc
        abbc/src/leveldb/table/iterator_wrapper.h
        abbc/src/leveldb/table/merger.cc
        abbc/src/leveldb/table/merger.h
        abbc/src/leveldb/table/table.cc
        abbc/src/leveldb/table/table_builder.cc
        abbc/src/leveldb/table/table_test.cc
        abbc/src/leveldb/table/two_level_iterator.cc
        abbc/src/leveldb/table/two_level_iterator.h
        abbc/src/leveldb/util/arena.cc
        abbc/src/leveldb/util/arena.h
        abbc/src/leveldb/util/arena_test.cc
        abbc/src/leveldb/util/bloom.cc
        abbc/src/leveldb/util/bloom_test.cc
        abbc/src/leveldb/util/cache.cc
        abbc/src/leveldb/util/cache_test.cc
        abbc/src/leveldb/util/coding.cc
        abbc/src/leveldb/util/coding.h
        abbc/src/leveldb/util/coding_test.cc
        abbc/src/leveldb/util/comparator.cc
        abbc/src/leveldb/util/crc32c.cc
        abbc/src/leveldb/util/crc32c.h
        abbc/src/leveldb/util/crc32c_test.cc
        abbc/src/leveldb/util/env.cc
        abbc/src/leveldb/util/env_posix.cc
        abbc/src/leveldb/util/env_test.cc
        abbc/src/leveldb/util/env_win.cc
        abbc/src/leveldb/util/filter_policy.cc
        abbc/src/leveldb/util/hash.cc
        abbc/src/leveldb/util/hash.h
        abbc/src/leveldb/util/histogram.cc
        abbc/src/leveldb/util/histogram.h
        abbc/src/leveldb/util/logging.cc
        abbc/src/leveldb/util/logging.h
        abbc/src/leveldb/util/mutexlock.h
        abbc/src/leveldb/util/options.cc
        abbc/src/leveldb/util/posix_logger.h
        abbc/src/leveldb/util/random.h
        abbc/src/leveldb/util/status.cc
        abbc/src/leveldb/util/testharness.cc
        abbc/src/leveldb/util/testharness.h
        abbc/src/leveldb/util/testutil.cc
        abbc/src/leveldb/util/testutil.h
        abbc/src/qt/test/test_main.cpp
        abbc/src/qt/test/uritests.cpp
        abbc/src/qt/test/uritests.h
        abbc/src/qt/aboutdialog.cpp
        abbc/src/qt/aboutdialog.h
        abbc/src/qt/addressbookpage.cpp
        abbc/src/qt/addressbookpage.h
        abbc/src/qt/addresstablemodel.cpp
        abbc/src/qt/addresstablemodel.h
        abbc/src/qt/askpassphrasedialog.cpp
        abbc/src/qt/askpassphrasedialog.h
        abbc/src/qt/bitcoin.cpp
        abbc/src/qt/bitcoinaddressvalidator.cpp
        abbc/src/qt/bitcoinaddressvalidator.h
        abbc/src/qt/bitcoinamountfield.cpp
        abbc/src/qt/bitcoinamountfield.h
        abbc/src/qt/bitcoingui.cpp
        abbc/src/qt/bitcoingui.h
        abbc/src/qt/bitcoinstrings.cpp
        abbc/src/qt/bitcoinunits.cpp
        abbc/src/qt/bitcoinunits.h
        abbc/src/qt/blockbrowser.cpp
        abbc/src/qt/blockbrowser.h
        abbc/src/qt/charitydialog.cpp
        abbc/src/qt/charitydialog.h
        abbc/src/qt/chatwindow.cpp
        abbc/src/qt/chatwindow.h
        abbc/src/qt/clientmodel.cpp
        abbc/src/qt/clientmodel.h
        abbc/src/qt/coincontroldialog.cpp
        abbc/src/qt/coincontroldialog.h
        abbc/src/qt/coincontroltreewidget.cpp
        abbc/src/qt/coincontroltreewidget.h
        abbc/src/qt/csvmodelwriter.cpp
        abbc/src/qt/csvmodelwriter.h
        abbc/src/qt/editaddressdialog.cpp
        abbc/src/qt/editaddressdialog.h
        abbc/src/qt/guiconstants.h
        abbc/src/qt/guiutil.cpp
        abbc/src/qt/guiutil.h
        abbc/src/qt/macdockiconhandler.h
        abbc/src/qt/macdockiconhandler.mm
        abbc/src/qt/monitoreddatamapper.cpp
        abbc/src/qt/monitoreddatamapper.h
        abbc/src/qt/notificator.cpp
        abbc/src/qt/notificator.h
        abbc/src/qt/optionsdialog.cpp
        abbc/src/qt/optionsdialog.h
        abbc/src/qt/optionsmodel.cpp
        abbc/src/qt/optionsmodel.h
        abbc/src/qt/overviewpage.cpp
        abbc/src/qt/overviewpage.h
        abbc/src/qt/qcomboboxfiltercoins.cpp
        abbc/src/qt/qcomboboxfiltercoins.h
        abbc/src/qt/qcustomplot.cpp
        abbc/src/qt/qcustomplot.h
        abbc/src/qt/qrcodedialog.cpp
        abbc/src/qt/qrcodedialog.h
        abbc/src/qt/qtipcserver.cpp
        abbc/src/qt/qtipcserver.h
        abbc/src/qt/qvalidatedlineedit.cpp
        abbc/src/qt/qvalidatedlineedit.h
        abbc/src/qt/qvaluecombobox.cpp
        abbc/src/qt/qvaluecombobox.h
        abbc/src/qt/rpcconsole.cpp
        abbc/src/qt/rpcconsole.h
        abbc/src/qt/sendcoinsdialog.cpp
        abbc/src/qt/sendcoinsdialog.h
        abbc/src/qt/sendcoinsentry.cpp
        abbc/src/qt/sendcoinsentry.h
        abbc/src/qt/serveur.cpp
        abbc/src/qt/serveur.h
        abbc/src/qt/signverifymessagedialog.cpp
        abbc/src/qt/signverifymessagedialog.h
        abbc/src/qt/statisticspage.cpp
        abbc/src/qt/statisticspage.h
        abbc/src/qt/transactiondesc.cpp
        abbc/src/qt/transactiondesc.h
        abbc/src/qt/transactiondescdialog.cpp
        abbc/src/qt/transactiondescdialog.h
        abbc/src/qt/transactionfilterproxy.cpp
        abbc/src/qt/transactionfilterproxy.h
        abbc/src/qt/transactionrecord.cpp
        abbc/src/qt/transactionrecord.h
        abbc/src/qt/transactiontablemodel.cpp
        abbc/src/qt/transactiontablemodel.h
        abbc/src/qt/transactionview.cpp
        abbc/src/qt/transactionview.h
        abbc/src/qt/walletmodel.cpp
        abbc/src/qt/walletmodel.h
        abbc/src/test/accounting_tests.cpp
        abbc/src/test/allocator_tests.cpp
        abbc/src/test/base32_tests.cpp
        abbc/src/test/base58_tests.cpp
        abbc/src/test/base64_tests.cpp
        abbc/src/test/bignum_tests.cpp
        abbc/src/test/Checkpoints_tests.cpp
        abbc/src/test/DoS_tests.cpp
        abbc/src/test/getarg_tests.cpp
        abbc/src/test/key_tests.cpp
        abbc/src/test/miner_tests.cpp
        abbc/src/test/mruset_tests.cpp
        abbc/src/test/multisig_tests.cpp
        abbc/src/test/netbase_tests.cpp
        abbc/src/test/rpc_tests.cpp
        abbc/src/test/script_P2SH_tests.cpp
        abbc/src/test/script_tests.cpp
        abbc/src/test/sigopcount_tests.cpp
        abbc/src/test/test_bitcoin.cpp
        abbc/src/test/transaction_tests.cpp
        abbc/src/test/uint160_tests.cpp
        abbc/src/test/uint256_tests.cpp
        abbc/src/test/util_tests.cpp
        abbc/src/test/wallet_tests.cpp
        abbc/src/addrman.cpp
        abbc/src/addrman.h
        abbc/src/aes_helper.c
        abbc/src/alert.cpp
        abbc/src/alert.h
        abbc/src/allocators.h
        abbc/src/base58.h
        abbc/src/bignum.h
        abbc/src/bitcoinrpc.cpp
        abbc/src/bitcoinrpc.h
        abbc/src/crypto/blake.c
        abbc/src/bloom.cpp
        abbc/src/bloom.h
        abbc/src/crypto/bmw.c
        abbc/src/checkpoints.cpp
        abbc/src/checkpoints.h
        abbc/src/checkqueue.h
        abbc/src/clientversion.h
        abbc/src/coincontrol.h
        abbc/src/compat.h
        abbc/src/crypter.cpp
        abbc/src/crypter.h
        abbc/src/cubehash.c
        abbc/src/db.cpp
        abbc/src/db.h
        abbc/src/echo.c
        abbc/src/fugue.c
        abbc/src/groestl.c
        abbc/src/hamsi.c
        abbc/src/hamsi_helper.c
        abbc/src/hash.cpp
        abbc/src/hash.h
        abbc/src/hashblock.h
        abbc/src/init.cpp
        abbc/src/init.h
        abbc/src/irc.cpp
        abbc/src/irc.h
        abbc/src/jh.c
        abbc/src/keccak.c
        abbc/src/kernel.cpp
        abbc/src/kernel.h
        abbc/src/key.cpp
        abbc/src/key.h
        abbc/src/keystore.cpp
        abbc/src/keystore.h
        abbc/src/limitedmap.h
        abbc/src/luffa.c
        abbc/src/main.cpp
        abbc/src/main.h
        abbc/src/miner.cpp
        abbc/src/miner.h
        abbc/src/mruset.h
        abbc/src/net.cpp
        abbc/src/net.h
        abbc/src/netbase.cpp
        abbc/src/netbase.h
        abbc/src/noui.cpp
        abbc/src/pbkdf2.cpp
        abbc/src/pbkdf2.h
        abbc/src/protocol.cpp
        abbc/src/protocol.h
        abbc/src/rpcblockchain.cpp
        abbc/src/rpcdump.cpp
        abbc/src/rpcmining.cpp
        abbc/src/rpcnet.cpp
        abbc/src/rpcrawtransaction.cpp
        abbc/src/rpcwallet.cpp
        abbc/src/script.cpp
        abbc/src/script.h
        abbc/src/scrypt.cpp
        abbc/src/scrypt.h
        abbc/src/serialize.h
        abbc/src/shavite.c
        abbc/src/simd.c
        abbc/src/skein.c
        abbc/src/sph_blake.h
        abbc/src/sph_bmw.h
        abbc/src/sph_cubehash.h
        abbc/src/sph_echo.h
        abbc/src/sph_fugue.h
        abbc/src/sph_groestl.h
        abbc/src/sph_hamsi.h
        abbc/src/sph_jh.h
        abbc/src/sph_keccak.h
        abbc/src/sph_luffa.h
        abbc/src/sph_shavite.h
        abbc/src/sph_simd.h
        abbc/src/sph_skein.h
        abbc/src/sph_types.h
        abbc/src/strlcpy.h
        abbc/src/sync.cpp
        abbc/src/sync.h
        abbc/src/threadsafety.h
        abbc/src/txdb-leveldb.cpp
        abbc/src/txdb-leveldb.h
        abbc/src/txdb.h
        abbc/src/ui_interface.h
        abbc/src/uint256.h
        abbc/src/uint256_t.h
        abbc/src/util.cpp
        abbc/src/util.h
        abbc/src/version.cpp
        abbc/src/version.h
        abbc/src/wallet.cpp
        abbc/src/wallet.h
        abbc/src/walletdb.cpp
        abbc/src/walletdb.h
        abbc/qrc_bitcoin.cpp)
